--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>Building my skills one AWS service at a time - S3, CloudFront, and beyond!</p>
                 </div>
                 <div class="fact-card">
-                    <h4>💡 Fun Project</h4>
+                    <h4>💡 Fun Project 💡</h4>
                     <p>This website is hosted on Amazon S3 with CloudFront for global delivery!</p>
                 </div>
             </div>
